--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>Healthy Life Clinic pvt ltd</h1>
+                <h1>Healthy Life Clinic pvt ltd.</h1>
                 <p>Your Health, Our Priority</p>
             </div>
             <nav>
