--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Healthy Life Clinic - Expert Care for You and Your Family.">
-    <title>Healthy Life Clinic pvt ltd.</title>
+    <title>Healthy Life Clinic</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -15,7 +15,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>Healthy Life Clinic pvt ltd.</h1>
+                <h1>Healthy Life Clinic</h1>
                 <p>Your Health, Our Priority</p>
             </div>
             <nav>
